tests/fan-out-fan-in-heavy/k8s/manifests/plain-lb-envoy-configs.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: plain-lb-envoy-configs
data:
  ingress.yaml: |
    node:
      id: ingress
      cluster: local
    
    stats_config:
      stats_matcher:
        inclusion_list:
          patterns:
          - prefix: "http.ingress_"
    stats_flush_interval: 5s
    
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    static_resources:
      listeners:
      - name: listener_f1
        address:
          socket_address: { address: 0.0.0.0, port_value: 3000 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_f1
              generate_request_id: false
              use_remote_address: true
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                virtual_hosts:
                - name: entry
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/f1" }
                    route: { cluster: entry-f1, timeout: 10s }
    
      clusters:
      - name: entry-f1
        connect_timeout: 2s
        type: STRICT_DNS
        lb_policy: LEAST_REQUEST
        load_assignment:
          cluster_name: entry-f1
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: fan-out-fan-in-heavy-frontend
                    port_value: 2000
        circuit_breakers:
          thresholds:
          - priority: DEFAULT
            max_connections: 100000
            max_pending_requests: 100000
            max_requests: 100000
